--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6916,17 +6916,17 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #132692 !important;
+  background-color: #4257d1 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #132692 !important;
+  background-color: #1934d1 !important;
 }
 
 .bg-secondary {
-  background-color: #2c3e50 !important;
+  background-color: #126dc9 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
